Выполнено задание по спринту 7

--- a/MovieQuiz.xcodeproj/xcshareddata/xcschemes/MovieQuiz.xcscheme
+++ b/MovieQuiz.xcodeproj/xcshareddata/xcschemes/MovieQuiz.xcscheme
@@ -55,6 +55,17 @@
                ReferencedContainer = "container:MovieQuiz.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "F4F7B18C2DAAB15300509AAE"
+               BuildableName = "MovieQuizPresenterTests.xctest"
+               BlueprintName = "MovieQuizPresenterTests"
+               ReferencedContainer = "container:MovieQuiz.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
